<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_wherego"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <Spinner
            android:id="@+id/spiner"
            android:layout_width="200dp"
            android:layout_height="wrap_content" >
        </Spinner>
    </RelativeLayout>

    <TextView
        android:id="@+id/mylocationtext0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loggg"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/mylocationtext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lattt"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/mylocationtext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/mylocationtext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_approaching"
        android:textSize="15sp" />
	<ImageView
        android:id="@+id/jiaoda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"     
        android:src="@drawable/map1" />


</LinearLayout>