<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logname" />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_logkey" />
    <EditText
        android:id="@+id/et_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
               
         />
   	<RelativeLayout
   	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
   	   <CheckBox
   	    	android:text="@string/remembernum"
   	    	android:id="@+id/ckbox"
   	    	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:checked="true"/>
   	   <Button
   	       android:id="@+id/bt"
   	       android:layout_width="wrap_content"
   	       android:layout_height="wrap_content"
   	       android:layout_alignParentRight="true"
   	       android:text="@string/login"
   	       />    	  
   	</RelativeLayout>
</LinearLayout>